--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             <div class="envelope">
                 <div class="letter">
                     <div class="text">
-                        <strong>Dear Person.</strong>
+                        <strong>Dear Aadi,</strong>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Numquam labore omnis minus maiores laboriosam, facere in beatae esse. 
+                            Happy Boyfriend's Day. I love you sm ♡
+                            Take this nerdy display of love hehe, sending hugs ♡ 
                         </p>
                     </div>
                 </div>
