--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                         <strong>Dear Aadi,</strong>
                         <p>
                             Happy Boyfriend's Day. I love you sm ♡
-                            Take this nerdy display of love hehe, sending hugs ♡ 
+                            Take this nerdy display of love hehe, sending hugs and kisses ♡ 
                         </p>
                     </div>
                 </div>
